profile spacing fix

--- a/shared/css/components/account-profile.scss
+++ b/shared/css/components/account-profile.scss
@@ -33,8 +33,6 @@
 
 	.description {
 		font-size: 20px;
-		margin: 25px;
-		min-height: 100px;
 		width: 100%;
 
 		input {
